Created new url for groups/ rename swagger tags
